--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,19 +2,18 @@
   class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm"
 >
   <h5 class="my-0 mr-md-auto font-weight-normal">Angular CRUD</h5>
-  <nav class="my-2 my-md-0 mr-md-3">
-    <a
-      class="btn btn-outline-primary"
-      routerLinkActive="active"
-      routerLink="/employees-list"
-      >View Employees</a
-    >
-  </nav>
+  <nav class="my-2 my-md-0 mr-md-3"></nav>
   <a
     class="btn btn-outline-primary"
     routerLinkActive="active"
     routerLink="/create-employee"
     >Add Employee</a
+  >
+  <a
+    class="btn btn-outline-primary"
+    routerLinkActive="active"
+    routerLink="/employees-list"
+    >View Employees List</a
   >
 </div>
 
