--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <div
   class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white border-bottom shadow-sm"
 >
-  <h2 class="my-0 mr-md-auto font-weight-normal">Angular CRUD</h2>
+  <h2 class="my-0 mr-md-auto font-weight-normal">Angular CRUD Employee</h2>
 
   <nav class="my-2 my-md-0 mr-md-3"></nav>
-  <a class="btn btn-outline-primary px-md-4 mr-md-3"
+  <a class="btn btn-outline-success px-md-4 mr-md-3"
     routerLinkActive="active"
     routerLink="/create-employee"
-    >Add Employee</a
+    >Add New Employee</a
   >
-  <a class="btn btn-outline-primary px-md-4"
+  <a class="btn btn-warning px-md-4 mr-md-3"
     routerLinkActive="active"
     routerLink="/employees-list"
     >View Employees List</a
